# advent-of-code

./: .gitignore  README.md  go.mod  main.go
2019/: aoc2020.cabal
2019/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Main.hs  Utils.hs
2020/: aoc2020.cabal  run.sh
2020/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Utils.hs
2021/: .gitignore  aoc-haskell.cabal  day1.hs  day2.hs  day3.hs  day4.hs  hie.yaml  stack.yaml
2021/src/: Main.hs  Utils.hs  day02.hs  day03.hs  day06.hs  day07.hs  day08.hs  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day4.hs  day5.hs  day7.hs  day8.hs  day9.hs
2022/go/: go.sum
2022/go/day01/: part1.go
2022/go/day02/: part1.go
2022/go/day04/: part2.go
2022/go/day05/: part1.go
2022/go/day06/: part2.go
2022/go/day09/: part1.go
2022/go/day12/: part1.go
2022/rust/src/: day18.rs  day20.rs  day22.rs  main.rs
2023/: aoc2023.cabal  run.sh  tst12.py
2023/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Utils.hs
2024/: aoc2020.cabal  stack.yaml
2024/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Utils.hs
2025/: .envrc  .gitignore  README.md  add-day.sh  aoc2025.cabal  flake.nix  hie.yaml
2025/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Main.hs  Utils.hs
day01/: part2.go
day03/: part2.go
day04/: part1.go
day07/: part1.go
day08/: part1.go  part2.go
day09/: part2.go
day1/: part1.go  part2.py
day11/: part1.go  part2.go
day12/: part1.go  part2.go
day13/: part1.go  part2.go
day14/: part1.go  part2.go
day2/: part1.go  part2.go
day3/: part1.go
day4/: part1.go  part2.go
day5/: part1.go  part2.go
day6/: part1.go  part2.go
day7/: part1.go  part2.go
day8/: part1.go  part2.go
day9/: part1.go  part2.go
go/: main.go
go/day01/: part2.go
go/day02/: part2.go
go/day03/: part1.go
go/day05/: part2.go
go/day06/: part1.go
go/day07/: part2.go
go/day1/: part1.go
go/day10/: part1.go  part2.go
go/day11/: part1.go
go/day13/: part2.go
go/day14/: part1.go
go/day15/: part1.go  part2.go
go/day2/: part1.go  part2.go
go/day3/: part1.go  part2.go
go/day4/: part1.go  part2.go
go/day5/: part1.go  part2.go
go/day_1/: part_1.go
go/day_2/: main.go  part_1.go  part_2.go
go/utils/: utils.go
python/day_1/: part_2.py
rust/: day_2.rs
rust/src/: day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  main.rs
utils/: maxLengthArray.go  utils.go
