name:                aoc-haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable aoc-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Utils, Day10
  default-extensions:  NamedFieldPuns, ImportQualifiedPost
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , unordered-containers >= 0.2.19.1
                       , containers >= 0.6.7
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
