cabal-version:       2.2

name:                aoc2023
version:             0.1.0.0
build-type:          Simple

executable aoc2023
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Utils, Day01
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
