cabal-version: 3.0
name:          aoc2025
version:       0.1.0.0
build-type:    Simple

executable aoc2025
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Utils

  default-extensions:
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    TupleSections

  default-language:   GHC2021
  build-depends:
    , base                  >=4.7 && <5
    , hashable              >=1.2
    , heap                  >=1.0
    , containers            >=0.6
    , parsec                >=3.1
    , split                 >=0.2
    , unordered-containers  >=0.2
    , vector                >=0.13

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N
